--- a/icechallenges/icewk4.html
+++ b/icechallenges/icewk4.html
@@ -12,10 +12,15 @@
             <h1>Education</h1>
             <p>Education is the difference between wishing you could help others & being able to help them</p>
         </div>
-    </main>
-        <div class="box">
+        <div class="center">
             <h2>---President Nelson</h2>
         </div>
-        <img src="https://assets.ldscdn.org/77/3d/773d0c3048a583c96bbceb8e9067b3a4394585c7/russell_nelson_official_portrait_2018.jpeg" alt="Russell Nelson">
+        <li>1. Faith in the Lord Jesus Christ</li>
+        <li>2. Repentance</li>
+        <li>3. Baptism by immersion for the remission of sins</li>
+        <li>4. Laying on the hands for the gift of the Holy Ghost</li>
+        
+        <img src="https://assets.ldscdn.org/77/3d/773d0c3048a583c96bbceb8e9067b3a4394585c7/russell_nelson_official_portrait_2018.jpeg" alt="Russell Nelson" style="width: 10%; height: auto">
+    </main>
 </body>
 </html>
