changed to root

--- a/icechallenges/icewk6.html
+++ b/icechallenges/icewk6.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Week 6</title>
-    <link rel="stylesheet" href="icewk6.css">
+    <link rel="stylesheet" href="styles/icewk6.css">
 </head>
 <body>
-    
+    <div class="gridcontainer"> 
+        <img class="first-two-rows" src="images/w06_cherries.png" alt="graphic of two cherries with a stem">
+        <h1 class="two-column-heading">Tart & Sweet</h1>
+    </div>
 </body>
 </html>
