--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -121,8 +121,8 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
-
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+  
+    <img src="images/Site-plan-rafting-wireframe-2.png" alt="page 2 wireframe">
   </main>
 </body>
 
